# scotland-excess-death

./: .gitignore  README.md  pyproject.toml
data/: covid-deaths-21-data-week-37.xlsx  ~$covid-deaths-21-data-week-37.xlsx
src/scotland_deaths/: __init__.py  build_charts.py  chart_covid_vs_non_covid_excess_deaths.py  chart_excess_death_by_cause_and_location.py  chart_excess_death_by_cause_and_location_adjusted.py  chart_excess_deaths.py  chart_excess_deaths_summary.py  covid_deaths.py  excess_deaths.py  make_charts.py
src/scotland_deaths/covid_deaths/: __init__.py  covid_deaths.py
src/scotland_deaths/utils/: __init__.py  new_chart.py  new_single_panel_chart.py  new_six_panel_chart.py
tests/: test_covid_deaths.py  test_quality_check.py  test_scotland_deaths.py
