[tool.poetry]
name = "scotland-deaths"
version = "0.1.0"
description = ""
authors = ["Richard Lyon <richlyon@mac.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pandas = "^1.3.3"
tabulate = "^0.8.9"
openpyxl = "^3.0.9"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
